code updated for mino

--- a/tekton/src/tasks/gitops/gitops-minio.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-minio.yml.j2
@@ -9,6 +9,8 @@ spec:
       type: string
     - name: account
       type: string
+    - name: cluster_id
+      type: string
     - name: cluster_url
       type: string
       default: ""
