--- a/tekton/src/tasks/gitops/gitops-minio.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-minio.yml.j2
@@ -9,6 +9,8 @@ spec:
       type: string
     - name: account
       type: string
+    - name: mas_instance_id
+      type: string
     - name: cluster_id
       type: string
     - name: cluster_url
@@ -53,6 +55,8 @@ spec:
         value: $(params.cluster_name)
       - name: ACCOUNT
         value: $(params.account)
+      - name: MAS_INSTANCE_ID
+        value: $(params.mas_instance_id)
       #- name: CLUSTER_ID
       #  value: $(params.cluster_id)
       - name: CLUSTER_URL
