--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
@@ -2,43 +2,43 @@ merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ MAS_INSTANCE_ID }}"
 
 ibm_kmodel:
   mas_instance_id: {{ MAS_INSTANCE_ID }}
-  aibroker_internal_tls: "{{ MAS_INSTANCE_ID }}-internal-aibroker-tls"
+  aibroker_internal_tls: "{{ AIBROKER_INTERNAL_TLS }}"
 
   aibroker_namespace: "{{ AIBROKER_NAMESPACE }}"
 
   pull_secret_name: "<path:{{ SECRETS_PATH }}:{{ IMAGE_PULL_SECRET_B64 }}>"
 
-  mas_aibroker_storage_provider: "minio"
-  mas_aibroker_storage_ssl: "false"
+  mas_aibroker_storage_provider: "{{ MAS_AIBROKER_STORAGE_PROVIDER }}"
+  mas_aibroker_storage_ssl: "{{ MAS_AIBROKER_STORAGE_SSL }}"
 
   mas_aibroker_storage_accesskey: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_ACCESSKEY }}>"
   mas_aibroker_storage_secretkey: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_SECRETKEY }}>"
   mas_aibroker_storage_host: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_HOST }}>"
   mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_PORT }}>"
-  mas_aibroker_storage_region: ""
+  mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
 
-  mas_aibroker_storage_templates_bucket: "km-templates"
-  mas_aibroker_storage_tenants_bucket: "km-tenants"
-  mas_aibroker_storage_pipelines_bucket: "km-pipelines"
+  mas_aibroker_storage_templates_bucket: "{{ MAS_AIBROKER_STORAGE_TEMPLATES_BUCKET }}"
+  mas_aibroker_storage_tenants_bucket: "{{ MAS_AIBROKER_STORAGE_TENANTS_BUCKET }}"
+  mas_aibroker_storage_pipelines_bucket: "{{ MAS_AIBROKER_STORAGE_PIPELINES_BUCKET }}"
 
-  ssh_secret_name: "{{ MAS_INSTANCE_ID }}-kmodel-aibroker-tls"
+  ssh_secret_name: "{{ SSH_SECRET_NAME }}"
   
-  docker_server: "docker-na-public.artifactory.swg-devops.com/wiotp-docker-local/aibroker"
+  docker_server: "{{ DOCKER_SERVER }}"
 
-  tenantNamespace: "aibroker-user"
-  mas_aibroker_provision_tenant: ""
+  tenant_namespace: "{{ TENANT_NAMESPACE }}"
+  mas_aibroker_provision_tenant: "{{ MAS_AIBROKER_PROVISION_TENANT }}"
 
-  primary_storage_class: "nfs-client"
+  primary_storage_class: "{{ PRIMARY_STORAGE_CLASS }}"
 
 # Docker image
-  image_store: "docker-na-public.artifactory.swg-devops.com/wiotp-docker-local/aibroker/store:1.0.3-pre.maint10xdev"
-  image_watcher: "docker-na-public.artifactory.swg-devops.com/wiotp-docker-local/aibroker/watcher:1.0.5-pre.maint10xdev"
-  image_controller: "docker-na-public.artifactory.swg-devops.com/wiotp-docker-local/aibroker/controller:1.0.8-pre.maint10xdev"  
+  image_store: "{{ IMAGE_STORE }}"
+  image_watcher: "{{ IMAGE_WATCHER }}"
+  image_controller: "{{ IMAGE_CONTROLLER }}"  
   
-  mas_aibroker_pipeline_steps_tag: 1.0.0
-  mas_aibroker_connector_tag: 1.0.0
+  mas_aibroker_pipeline_steps_tag: "{{ MAS_AIBROKER_PIPELINE_STEPS_TAG }}"
+  mas_aibroker_connector_tag: "{{ MAS_AIBROKER_CONNECTOR_TAG }}"
 
-  mas_aibroker_saas: "true"
+  mas_aibroker_saas: "{{ MAS_AIBROKER_SAAS }}"
   
-  model_id_unique_length: "8"
-  model_id_prefix: "m"
+  model_id_unique_length: "{{ MODEL_ID_UNIQUE_LENGTH }}"
+  model_id_prefix: "{{ MODEL_ID_PREFIX }}"
