added kmodel related variables and removed mas_instance_id from minio task

--- a/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
@@ -137,6 +137,34 @@ spec:
       type: string
     - name: opendatahub_namespace
       type: string
+ 
+    # KMODEL-specific 
+    - name: aibroker_internal_tls
+      type: string
+    - name: docker_server
+      type: string
+    - name: image_controller
+      type: string
+    - name: image_store
+      type: string
+    - name: image_watcher
+      type: string
+    - name: mas_aibroker_connector_tag
+      type: string
+    - name: mas_aibroker_pipeline_steps_tag
+      type: string
+    - name: mas_aibroker_provision_tenant
+      type: string
+    - name: mas_aibroker_saas
+      type: string
+    - name: model_id_prefix
+      type: string
+    - name: model_id_unique_length
+      type: string
+    - name: ssh_secret_name
+      type: string
+    - name: tenantNamespace
+      type: string   
 
   workspaces:
     - name: configs
