--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
@@ -25,7 +25,7 @@ ibm_kmodel:
   
   docker_server: "{{ DOCKER_SERVER }}"
 
-  tenant_namespace: "{{ TENANT_NAMESPACE }}"
+  tenantNamespace: "{{ TENANT_NAMESPACE }}"
   mas_aibroker_provision_tenant: "{{ MAS_AIBROKER_PROVISION_TENANT }}"
 
   primary_storage_class: "{{ PRIMARY_STORAGE_CLASS }}"
