--- a/tekton/src/tasks/gitops/gitops-odh.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-odh.yml.j2
@@ -83,60 +83,17 @@ spec:
         git config --global user.name "MAS Automation"
         git config --global user.email "you@example.com"
         git config --global user.password $GITHUB_PAT
-        
+        #mas gitops-odh --account-id "$ACCOUNT_ID" --cluster-id "$CLUSTER_ID"   --secrets-path "$SECRETS_PATH"   --github-host "$GITHUB_HOST"   --github-org "$GITHUB_ORG"   --github-repo "$GITHUB_REPO"   --git-branch "$GIT_BRANCH" --github-push
         mkdir -p /tmp/init-odh
         mas gitops-odh -a $ACCOUNT -c $CLUSTER_NAME \
-        --dir /tmp/init-odh \
         --secrets-path $SECRET_PATH \
+        --dir /tmp/init-odh \
         --github-push \
         --github-host $GITHUB_HOST \
-        --github-org $GITHUB_ORG \
+        --github-org  $GITHUB_ORG \
         --github-repo $GITHUB_REPO \
-        --git-branch $GIT_BRANCH \
-        --odh-channel $ODH_CHANNEL \
-        --odh-catalog-source $ODH_CATALOG_SOURCE \
-        --odh-operator-version $ODH_OPERATOR_VERSION \
-        --odh-namespace $ODH_NAMESPACE \
-        --pull-secret-name $PULL_SECRET_NAME \
-        --opendatahub-name $OPENDATAHUB_NAME \
-        --opendatahub-operator-group $OPENDATAHUB_OPERATOR_GROUP_NAME \
-        --opendatahub-installplan $ODH_INSTALL_PLAN \
-        --opendatahub-channel $OPENDATAHUB_CHANNEL \
-        --opendatahub-source $OPENDATAHUB_SOURCE \
-        --opendatahub-source-namespace $OPENDATAHUB_SOURCE_NAMESPACE \
-        --odh-pipeline-name $ODH_PIPELINE_NAME \
-        --odh-pipeline-namespace $ODH_PIPELINE_NAMESPACE \
-        --odh-pipeline-operator-name $ODH_PIPELINE_OPERATOR_NAME \
-        --odh-pipeline-source $ODH_PIPELINE_SOURCE \
-        --odh-pipeline-source-namespace $ODH_PIPELINE_SOURCE_NAMESPACE \
-        --odh-pipeline-channel $ODH_PIPELINE_CHANNEL \
-        --odh-pipeline-installplan $ODH_PIPELINE_INSTALLPLAN \
-        --pipeline-catalog-source $PIPELINE_CATALOG_SOURCE \
-        --service-mesh-namespace $SERVICE_MESH_NAMESPACE \
-        --service-mesh-channel $SERVICE_MESH_CHANNEL \
-        --service-mesh-catalog-source $SERVICE_MESH_CATALOG_SOURCE \
-        --service-mesh-source-namespace $SERVICE_MESH_SOURCE_NAMESPACE \
-        --serverless-namespace $SERVERLESS_NAMESPACE \
-        --serverless-channel $SERVERLESS_CHANNEL \
-        --serverless-operator-name $SERVERLESS_OPERATOR_NAME \
-        --serverless-operator-source $SERVERLESS_OPERATOR_SOURCE \
-        --serverless-operator-source-namespace $SERVERLESS_OPERATOR_SOURCE_NAMESPACE \
-        --authorino-catalog-source $AUTHORINO_CATALOG_SOURCE \
-        --storage-provider $MAS_AIBROKER_STORAGE_PROVIDER \
-        --storage-accesskey $MAS_AIBROKER_STORAGE_ACCESSKEY \
-        --storage-secretkey $MAS_AIBROKER_STORAGE_SECRETKEY \
-        --storage-host $MAS_AIBROKER_STORAGE_HOST \
-        --storage-port $MAS_AIBROKER_STORAGE_PORT \
-        --storage-ssl $MAS_AIBROKER_STORAGE_SSL \
-        --storage-region $MAS_AIBROKER_STORAGE_REGION \
-        --pipelines-bucket $MAS_AIBROKER_STORAGE_PIPELINES_BUCKET \
-        --primary-storage-class $PRIMARY_STORAGE_CLASS \
-        --db-host $MAS_AIBROKER_DB_HOST \
-        --db-port $MAS_AIBROKER_DB_PORT \
-        --db-user $MAS_AIBROKER_DB_USER \
-        --db-database $MAS_AIBROKER_DB_DATABASE \
-        --db-secret-name $MAS_AIBROKER_DB_SECRET_NAME \
-        --db-secret-value $MAS_AIBROKER_DB_SECRET_VALUE
+        --git-branch $GIT_BRANCH
+
 
         exit $?
       command:
