--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-minio.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-minio.yaml.j2
@@ -1,4 +1,4 @@
-merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ MAS_INSTANCE_ID }}"
+merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AIBROKER_INSTANCE_ID }}"
 
 ibm_minio:
   minio_namespace: "{{ MINIO_NAMESPACE }}"
