aibroker code updated

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-odh-install.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-odh-install.yaml.j2
@@ -19,7 +19,7 @@ ibm_odh:
   odh_namespace: "opendatahub"
 
   aibroker_namespace: "{{ AIBROKER_NAMESPACE }}"
-  pull_secret_name: "<path:{{ SECRETS_PATH }}/{{ SECRET_ACCOUNT_PATH }}/ibm_entitlement#image_pull_secret_b64>"
+  pull_secret_name: "<path:{{ SECRETS_PATH }}/{{ SECRET_ACCOUNT_PATH }}ibm_entitlement#image_pull_secret_b64>"
 
   # ODH Pipeline operator
   odh_pipeline_name: "openshift-pipelines-operator"
