--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
@@ -17,9 +17,9 @@ ibm_kmodel:
   mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_PORT }}>"
   mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
 
-  mas_aibroker_storage_templates_bucket: "{{ MAS_AIBROKER_STORAGE_TEMPLATES_BUCKET }}"
-  mas_aibroker_storage_tenants_bucket: "{{ MAS_AIBROKER_STORAGE_TENANTS_BUCKET }}"
-  mas_aibroker_storage_pipelines_bucket: "{{ MAS_AIBROKER_STORAGE_PIPELINES_BUCKET }}"
+  mas_aibroker_storage_templates_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_BUCKET_TEMPLATES }}>"
+  mas_aibroker_storage_tenants_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_BUCKET_TENANTS }}>"
+  mas_aibroker_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_MINIO_BUCKET_PIPELINES }}>"
 
   ssh_secret_name: "{{ SSH_SECRET_NAME }}"
   
