--- a/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
@@ -225,22 +225,14 @@ spec:
 
         mkdir -p /tmp/init-aibroker-tenant
         
-        mas gitops-aibroker-tenant -a $ACCOUNT --cluster-id "$CLUSTER_ID" \
+        mas gitops-aibroker-tenant -a $ACCOUNT \
         --secrets-path "$SECRETS_PATH" \
         --github-push \
         --github-host "$GITHUB_HOST" \
         --github-org "$GITHUB_ORG" \
         --github-repo "$GITHUB_REPO" \
         --git-branch "$GIT_BRANCH" \
-        --mas_instance_id "$MAS_INSTANCE_ID" \
-        --tenantNamespace "$TENANT_NAMESPACE" \
-        --cluster_domain "$CLUSTER_DOMAIN" \
-        --slscfg_url "$SLSCFG_URL" \
-        --slscfg_client_id "$SLSCFG_CLIENT_ID" \
-        --mas_aibroker_watsonxai_url "$MAS_AIBROKER_WATSONXAI_URL" \
-        --mas_aibroker_watsonxai_apikey "$MAS_AIBROKER_WATSONXAI_APIKEY" \
-        --mas_aibroker_watsonxai_project_id "$MAS_AIBROKER_WATSONXAI_PROJECT_ID" \
-        --drocfg_url "$DROCFG_URL"
+
 
         exit $?
       command:
