--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
@@ -24,7 +24,7 @@ ibm_aibroker_tenant:
   slscfg_url: "{{ SLSCFG_URL }}"
   slscfg_registration_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SLSCFG_REGISTRATION_KEY }}>"
   mas_aibroker_sls_subscription_id: "{{ MAS_AIBROKER_SLS_SUBSCRIPTION_ID }}"
-  slscfg_clientId: "{{ SLSCFG_CLIENTID }}"
+  slscfg_clientId: "{{ SLSCFG_CLIENT_ID }}"
   slscfg_ca: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SLSCFG_CA }}>"
   slscfg_tls: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SLSCFG_TLS }}>"
   slscfg_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SLSCFG_KEY }}>"
