--- a/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
@@ -164,7 +164,7 @@ spec:
       - name: MAS_AIBROKER_SLS_SUBSCRIPTION_ID
         value: $(params.mas_aibroker_sls_subscription_id)
 
-      - name: SLSCFG_CLIENTID
+      - name: SLSCFG_CLIENT_ID
         value: $(params.slscfg_clientId)
 
       - name: SLSCFG_CA
