--- a/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
@@ -30,6 +30,8 @@ spec:
       type: string
     - name: mas_instance_id
       type: string
+    - name: tenant_id
+      type: string
     - name: tenantNamespace
       type: string
     - name: cluster_domain
@@ -121,6 +123,9 @@ spec:
 
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
+
+      - name: TENANT_ID
+        value: $(params.tenant_id)
 
       - name: TENANT_NAMESPACE
         value: $(params.tenantNamespace)
