--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
@@ -41,6 +41,16 @@ ibm_aibroker:
   drocfg_registration_key: "<path:{{ SECRETS_PATH }}:{{ DROCFG_REGISTRATION_KEY }}>"
   drocfg_url: "<path:{{ SECRETS_PATH }}:{{ DROCFG_URL }}>"
 
+
+
+  ##review
+  environment_type: "{{ ENVIRONMENT_TYPE }}"
+  # S3 
+  mas_aibroker_s3_endpoint_url: "{{ MAS_AIBROKER_S3_ENDPOINT_URL }}"
+  mas_aibroker_s3_region: "{{ MAS_AIBROKER_S3_REGION }}"
+  mas_aibroker_s3_bucket_prefix: "{{ MAS_AIBROKER_S3_BUCKET_PREFIX }}"
+  ##review  
+
   #JDBC
   jdbccfg_username: "<path:{{ SECRETS_PATH }}:{{ JDBCCFG_USERNAME }}>"
   jdbccfg_password: "<path:{{ SECRETS_PATH }}:{{ JDBCCFG_PASSWORD }}>"
