--- a/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
@@ -166,6 +166,21 @@ spec:
     - name: tenantNamespace
       type: string   
 
+    ##review
+    - name: environment_type
+      type: string
+
+    - name: mas_aibroker_s3_endpoint_url
+      type: string
+
+    - name: mas_aibroker_s3_region
+      type: string
+
+    - name: mas_aibroker_s3_bucket_prefix
+      type: string
+
+    ##review
+
   workspaces:
     - name: configs
 
@@ -376,6 +391,19 @@ spec:
           value: $(params.cluster_domain)
         - name: in_saas_env
           value: $(params.in_saas_env)
+        ##review
+        - name: environment_type
+          value: $(params.environment_type)
+
+        - name: mas_aibroker_s3_endpoint_url
+          value: $(params.mas_aibroker_s3_endpoint_url)
+
+        - name: mas_aibroker_s3_region
+          value: $(params.mas_aibroker_s3_region)
+
+        - name: mas_aibroker_s3_bucket_prefix
+          value: $(params.mas_aibroker_s3_bucket_prefix)
+        ##review
 
     # 3.gitops-Kmodel
     # -------------------------------------------------------------------------
